--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,7 +1,13 @@
 All Jobs for <strong><%= @company.name %></strong>
 
-<% @jobs.each do |job| %>
-  <ul>
+<ul>
+  <% @jobs.each do |job| %>
+  <li class=job_<%= job.id %>>
     <%= link_to job.title, company_job_path(@company, job) %> at <%= job.company.name %>
-  </ul>
-<% end %>
+    <%= link_to "Edit", edit_company_job_path(@company, job) %>
+    <%= link_to "Delete", company_job_path(@company, job), method: "delete" %>
+  </li>
+  <% end %>
+</ul>
+
+<a href="<%= new_company_job_path %>">Create New Job for <%= @company.name %></a>
