--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -10,6 +10,7 @@
 
   <%= f.label :city %>
   <%= f.text_field :city %>
+  <%= f.select :category, @categories.collect { |c| [c.title, c.id] } %>
 
   <%= f.submit %>
 <% end %>
