--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,16 +1,30 @@
 <%= form_for [@company, @job] do |f| %>
+  <p>Category:</p>
+  <%= f.select :category_id, @categories.collect { |c| [c.title, c.id] }, disable: false%>
+  <p>Role:</p>
   <%= f.label :title %>
   <%= f.text_field :title %>
 
+  <p>Company:</p>
+  <%= f.select :company_id, @categories.collect { |c| [c.title, c.id] }, disable: true%>
+
+  <p>City:</p>
+  <%= f.label :city %>
+  <%= f.text_field :city %>
+
+  <p>Description:</p>
   <%= f.label :description %>
   <%= f.text_field :description %>
 
+  <p>Interest:</p>
   <%= f.label :level_of_interest %>
   <%= f.number_field :level_of_interest %>
 
-  <%= f.label :city %>
-  <%= f.text_field :city %>
-  <%= f.select :category_id, @categories.collect { |c| [c.title, c.id] }, disable: false%>
+  <% if @job.id %>
+    <%= link_to "Cancel", company_job_path(@company, @job) %>
+  <% else %>
+    <%= link_to "Cancel", company_path(@company) %>
+  <% end %>
 
   <%= f.submit %>
 <% end %>
