--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,12 +1,26 @@
 <h1>All Jobs for <%= @company.name %></h1>
 <%= link_to "add a new job", new_company_job_path(@company) %>
-g
-<ul>
+
+<table>
+  <thead>
+    <tr>
+      <th></th>
+      <th></th>
+      <th>Role</th>
+      <th>Company</th>
+      <th>City</th>
+      <th>Interest</th>
+    </tr>
+  </thead>
+  <tbody>
   <% @jobs.each do |job| %>
-  <li class=job_<%= job.id %>>
-    <%= link_to job.title, company_job_path(@company, job) %> at <%= job.company.name %>
-    <%= link_to "Edit", edit_company_job_path(@company, job) %>
-    <%= link_to "Delete", company_job_path(@company, job), method: "delete" %>
-  </li>
+  <tr class=job_<%= job.id %>>
+    <td><%= link_to "Edit", edit_company_job_path(@company, job) %></td>
+    <td><%= link_to "Delete", company_job_path(@company, job), method: "delete" %></td>
+    <td><%= link_to job.title, company_job_path(@company, job) %></td>
+    <td><p><%= job.company.name %></p></td>
+    <td><p><%= job.city %></p></td>
+    <td><p><%= job.level_of_interest %></p></td>
+  </tr>
   <% end %>
 </ul>
