--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -13,14 +13,15 @@
     </tr>
   </thead>
   <tbody>
-  <% @jobs.each do |job| %>
-  <tr class=job_<%= job.id %>>
-    <td><%= link_to "Edit", edit_company_job_path(@company, job) %></td>
-    <td><%= link_to "Delete", company_job_path(@company, job), method: "delete" %></td>
-    <td><%= link_to job.title, company_job_path(@company, job) %></td>
-    <td><p><%= job.company.name %></p></td>
-    <td><p><%= job.city %></p></td>
-    <td><p><%= job.level_of_interest %></p></td>
-  </tr>
-  <% end %>
-</ul>
+    <% @jobs.each do |job| %>
+    <tr class=job_<%= job.id %>>
+      <td><%= link_to "Edit", edit_company_job_path(@company, job) %></td>
+      <td><%= link_to "Delete", company_job_path(@company, job), method: "delete" %></td>
+      <td><%= link_to job.title, company_job_path(@company, job) %></td>
+      <td><p><%= job.company.name %></p></td>
+      <td><p><%= job.city %></p></td>
+      <td><p><%= job.level_of_interest %></p></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
