--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,3 +1,7 @@
-<h2>Create a new job at <%= @company.name %> here!</h2>
+<header>
+  <h1>Add Job</h1>
+</header>
 
+<main>
 <%= render partial: "form" %>
+</main>
