--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -67,7 +67,7 @@ body {
 }
 
 header {
-	background-color: lightgrey;
+	background-color: lightblue;
 	padding: 2em 2em 1.5em 2em;
 }
 header h1 {
@@ -104,4 +104,20 @@ thead {
 form {
 	min-width: 400px;
 	width: 60%;
+}
+form section {
+	padding: .5em;
+	font-size: 1.3em;
+}
+form section p {
+	width: 20%;
+	text-align: right;
+	float: left;
+	padding-right: 1em;
+}
+form input {
+	height: 1.4em;
+}
+h2 {
+	padding-bottom: .5em;
 }
