--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,36 +1,37 @@
 <%= form_for [@company, @job] do |f| %>
 <section>
-  <p>Category:
-  <%= f.select :category_id, @categories.collect { |c| [c.title, c.id] }, disable: false%></p>
+  <p>Category:</p>
+  <%= f.select :category_id, @categories.collect { |c| [c.title, c.id] }, disable: false%>
   <%= link_to "add new category", new_company_path %>
 </section>
 
 <section>
-  <p>Role:
-  <%= f.text_field :title %></p>
+  <p>Role:</p>
+  <%= f.text_field :title %>
 </section>
 
 <section>
-  <p>Company:
-  <%= f.select :company_id, @categories.collect { |c| [c.title, c.id] }, disable: true%></p>
+  <p>Company:</p>
+  <%= f.select :company_id, @categories.collect { |c| [c.title, c.id] }, disable: true%>
 </section>
 
 <section>
-  <p>City:
-  <%= f.text_field :city %></p>
+  <p>City:</p>
+  <%= f.text_field :city %>
 </section>
 
 <section>
-  <p>Description:
-  <%= f.text_field :description %></p>
+  <p>Description:</p>
+  <%= f.text_field :description %>
 </section>
 
 <section>
-  <p>Interest:
-  <%= f.number_field :level_of_interest %></p>
+  <p>Interest:</p>
+  <%= f.number_field :level_of_interest %>
 </section>
 
 <section>
+  <p>.</p>
   <% if @job.id %>
     <%= link_to "Cancel", company_job_path(@company, @job), class: 'form-button'%>
   <% else %>
