standardizes html formatting for new pages

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,9 @@
+<header>
 <h1>Categories</h1>
 <%= link_to "add a new category", new_category_path %>
+</header>
 
+<main>
 <table>
   <thead>
     <tr>
@@ -19,3 +22,4 @@
     <% end %>
   </tbody>
 </table>
+</main>
