--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,6 +1,8 @@
-<h1>Companies</h1>
+<header><h1>Companies</h1>
 <%= link_to "add a new company", new_company_path %>
+</header>
 
+<main>
 <table>
   <thead>
     <tr>
@@ -19,3 +21,4 @@
     <% end %>
   </tbody>
 </table>
+</main>
