--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,3 +1,4 @@
-<h2>Edit <%= @company.name %> here!</h2>
-
+<header><h1>Edit <%= @company.name %> here!</h1></header>
+<main>
 <%= render partial: "form" %>
+</main>
