--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,3 +1,5 @@
-<h2>Create a new company here!</h2>
+<header><h1>Create a new company here!</h1></header>
 
+<main>
 <%= render partial: "form" %>
+</main>
