--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
 
     <%= link_to "Companies", companies_path %>
+    <%= link_to "Categories", categories_path %>
 
   <% flash.each do |name, msg| %>
     <%= content_tag :div, msg, class: name %>
