--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -12,14 +12,19 @@
 <h2>Description: <%= @job.description %></h2>
 
 <h2>Notes:</h2>
-<textarea></textarea>
-<button>Save</button>
+<%= form_for @job_comment do |f| %>
+  <%= f.label :content %>
+  <%= f.text_field :content %>
+  <%= f.hidden_field :job_id, value: @job.id %>
+  <%= f.submit "Save"%>
+<% end %>
 
 <table>
   <tbody>
     <% @job.job_comments.each do |job_comment| %>
     <tr class=job_comment_<%= job_comment.id %>>
       <td><p><%= job_comment.created_at %></p></td>
+      <td><p><%= job_comment.updated_at %></p></td>
       <td><p><%= job_comment.content %></p></td>
     </tr>
     <% end %>
