improved styling and consistency

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -66,9 +66,26 @@ body {
 	font-family: sans-serif;
 }
 
+nav {
+	background-color: black;
+	height: 3em;
+	position: fixed;
+	width: 100%;
+	top: 0;
+}
+nav div {
+	height: .6em;
+}
+nav a {
+	color: white;
+	padding: 2em;
+	font-size: 1.3em;
+	top: .5em;
+}
+
 header {
 	background-color: lightblue;
-	padding: 2em 2em 1.5em 2em;
+	padding: 4.5em 2em 1.5em 2em;
 }
 header h1 {
 	padding-bottom: .6em;
@@ -91,6 +108,10 @@ td {
 	border: 2px solid lightgrey;
 }
 .table-button {
+	width: 3em;
+	padding: 0 1em 0 1em;
+}
+.table-button a {
 
 }
 th {
