--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,4 @@
-<header><h1>All Jobs for <%= @category.title %></h1><header>
+<header><h1>All Jobs for <%= @category.title %></h1></header>
 
 <main>
 <% @category.jobs.each do |job| %>
