--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <nav>
+    <div></div>
     <%= link_to "Companies", companies_path %>
     <%= link_to "Categories", categories_path %>
-
+  </nav>
   <% flash.each do |name, msg| %>
     <%= content_tag :div, msg, class: name %>
   <% end %>
