--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -31,7 +31,7 @@
 </section>
 
 <section>
-  <p>.</p>
+  <p class="empty">.</p>
   <% if @job.id %>
     <%= link_to "Cancel", company_job_path(@company, @job), class: 'form-button'%>
   <% else %>
