--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -18,8 +18,8 @@
   <tbody>
     <% @jobs.each do |job| %>
     <tr class=job_<%= job.id %>>
-      <td class: 'table-button'><%= link_to image_tag('1208-file-type-pencil@2x.svg', alt: "Edit"), edit_company_job_path(@company, job) %></td>
-      <td class: 'table-button'><%= link_to image_tag('1224-basket-delete@2x copy.svg', alt: "Delete"), company_job_path(@company, job), method: "delete" %></td>
+      <td class: 'table-button'><%= link_to image_tag('1208-file-type-pencil-toolbar@2x.svg', alt: "Edit"), edit_company_job_path(@company, job) %></td>
+      <td class: 'table-button'><%= link_to image_tag('1224-basket-delete-toolbar@2x.svg', alt: "Delete"), company_job_path(@company, job), method: "delete" %></td>
       <td><%= link_to job.title, company_job_path(@company, job) %></td>
       <td><p><%= job.company.name %></p></td>
       <td><p><%= job.city %></p></td>
