--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,11 +1,28 @@
 <header><h1>All Jobs for <%= @category.title %></h1></header>
 
 <main>
-<% @category.jobs.each do |job| %>
-  <ul>
-    <li>
-      <%= link_to job.title, category_job_path(@category, job) %>
-    </li>
-  </ul>
-<% end %>
+  <table>
+    <thead>
+      <tr>
+        <th></th>
+        <th></th>
+        <th>Role</th>
+        <th>Company</th>
+        <th>City</th>
+        <th>Interest</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @category.jobs.each do |job| %>
+      <tr class=job_<%= job.id %>>
+        <td class: 'table-button'><%= link_to image_tag('1208-file-type-pencil-toolbar@2x.svg', alt: "Edit"), edit_company_job_path(job.company, job) %></td>
+        <td class: 'table-button'><%= link_to image_tag('1224-basket-delete-toolbar@2x.svg', alt: "Delete"), company_job_path(job.company, job), method: "delete" %></td>
+        <td><%= link_to job.title, company_job_path(job.company, job) %></td>
+        <td><p><%= job.company.name %></p></td>
+        <td><p><%= job.city %></p></td>
+        <td><p><%= job.level_of_interest %></p></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
 </main>
