--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,11 +1,11 @@
-<header><h1>All Jobs for <%= @company.name %></h1></header>
+<header><h1><%= @company.name %><%= link_to image_tag('1208-file-type-pencil-toolbar@2x.svg', alt: "Edit"), edit_company_path(@company) %> <%= link_to image_tag('1224-basket-delete-toolbar@2x.svg', alt: "Delete"), company_path(@company), method: "delete" %></h1></header>
 
 <main>
-<% @company.jobs.each do |job| %>
+<!-- <% @company.jobs.each do |job| %>
   <ul>
     <li>
       <%= link_to job.title, company_job_path(@company, job) %>
     </li>
   </ul>
-<% end %>
+<% end %> -->
 </main>
