--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -5,7 +5,7 @@
 </header>
 
 <main>
-  <%= form_for @job_comment do |f| %>
+  <%= form_for @comment do |f| %>
   <section>
     <p>Location:</p>
     <h3><%= @job.city %></h3>
@@ -26,13 +26,13 @@
 </section>
   <% end %>
 
-<table class="job_comments">
+<table class="comments">
   <tbody>
-    <% @job_comments.each do |job_comment| %>
-    <tr class=job_comment_<%= job_comment.id %>>
-      <td><p><%= job_comment.created_at %></p></td>
-      <td><p><%= job_comment.updated_at %></p></td>
-      <td><p><%= job_comment.content %></p></td>
+    <% @comments.each do |comment| %>
+    <tr class=comment_<%= comment.id %>>
+      <td><p><%= comment.created_at %></p></td>
+      <td><p><%= comment.updated_at %></p></td>
+      <td><p><%= comment.content %></p></td>
     </tr>
     <% end %>
   </tbody>
