--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -149,3 +149,15 @@ h2 {
 .empty {
 	color: whitesmoke;
 }
+.notice {
+	position: fixed;
+	top: 3em;
+	left: 2em;
+	color: red;
+}
+.success {
+	position: fixed;
+	top: 3em;
+	left: 2em;
+	color: darkgreen;
+}
