--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -74,13 +74,13 @@ nav {
 	top: 0;
 }
 nav div {
-	height: .6em;
+	height: 0.6em;
 }
 nav a {
 	color: white;
 	padding: 2em;
 	font-size: 1.3em;
-	top: .5em;
+	top: 0.5em;
 }
 
 header {
@@ -88,7 +88,7 @@ header {
 	padding: 4.5em 2em 1.5em 2em;
 }
 header h1 {
-	padding-bottom: .6em;
+	padding-bottom: 0.6em;
 	padding-right: 2em;
 }
 header a {
@@ -105,7 +105,7 @@ table {
 	border: 2px solid black;
 }
 td {
-	padding: .2em 1em .2em 1em;
+	padding: 0.2em 1em 0.2em 1em;
 	border: 2px solid lightgrey;
 }
 .table-button {
@@ -113,11 +113,10 @@ td {
 	padding: 0 1em 0 1em;
 }
 .table-button a {
-
 }
 th {
 	text-align: left;
-	padding: .2em 1em .2em 1em;
+	padding: 0.2em 1em 0.2em 1em;
 }
 thead {
 	background-color: lightgrey;
@@ -128,7 +127,7 @@ form {
 	width: 75%;
 }
 section {
-	padding: .5em;
+	padding: 0.5em;
 	font-size: 1.3em;
 }
 section p {
@@ -143,9 +142,27 @@ form input {
 	height: 1.4em;
 }
 h2 {
-	padding-bottom: .5em;
+	padding-bottom: 0.5em;
+}
+
+aside {
+	display: flex;
+}
+
+aside div {
+	width: 40%;
+	padding: 2em;
+	margin: 2em;
 }
 
 .empty {
 	color: whitesmoke;
+}
+
+.top-jobs {
+	border: 2px solid black;
+}
+
+.top-companies {
+	border: 2px solid black;
 }
