--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,10 +1,7 @@
-<main>
-<br>
-<br>
-<br>
+<header>
 <h1>Job Tracker</h1>
-<br>
-
+</header>
+<main>
 <aside>
 <div class='top-companies'>
   <h3>Top Companies by Interest</h3>
