update dashboard with view of cities and create tests for simplecove coverage

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,25 +1,34 @@
 <header>
-<h1>Job Tracker</h1>
+  <h1>Job Tracker</h1>
 </header>
 <main>
-<aside>
-<div class='top-companies'>
-  <h3>Top Companies by Interest</h3>
-  <ul class='top-by-interest'>
-    <% @companies_grouped_with_avg_interest_lvl.each do |company_info| %>
-    <li><%= company_info.first %> (<%=company_info.last%>)</li>
-    <% end %>
-  </ul>
-</div>
-<br>
+  <aside>
+    <div class='top-companies'>
+      <h3>Top Companies by Interest</h3>
+      <ul class='top-by-interest'>
+        <% @companies_grouped_with_avg_interest_lvl.each do |company_info| %>
+        <li><%= company_info.first %> (<%=company_info.last%>)</li>
+        <% end %>
+      </ul>
+    </div>
+    <br>
 
-<div class='top-jobs'>
-  <h3>Jobs by Interest</h3>
-  <ul class='top-by-interest'>
-    <% @jobs_grouped_by_interest_level.each do |job_info| %>
-    <li><%= job_info.first.first %> (<%= job_info.last %>)</li>
-    <% end %>
-  </ul>
-</div>
-</aside>
+    <div class='top-jobs'>
+      <h3>Jobs by Interest</h3>
+      <ul class='top-by-interest'>
+        <% @jobs_grouped_by_interest_level.each do |job_info| %>
+        <li><%= job_info.first.first %> (<%= job_info.last %>)</li>
+        <% end %>
+      </ul>
+    </div>
+
+    <div class='top-jobs'>
+      <h3>Jobs by City</h3>
+      <ul class='job-by-city'>
+        <% @jobs_grouped_with_city.each do |job_info| %>
+        <li><%= link_to "#{job_info[0]} jobs", "/jobs?location=#{job_info[0]}" %> (<%= job_info[1] %> jobs)</li>
+        <% end %>
+      </ul>
+    </div>
+  </aside>
 </main>
