--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <div></div>
     <%= link_to "Companies", companies_path %>
     <%= link_to "Categories", categories_path %>
+    <%= link_to "Dashboard", dashboard_path %>
   </nav>
   <% flash.each do |name, msg| %>
     <%= content_tag :div, msg, class: name %>
